{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 9,
  "lineage": "749672bf-e8d5-a1d2-a78c-9c71f01b832e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpn_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9b0f07dd5feed47",
            "arn": "arn:aws:ec2:us-east-1:401892909632:instance/i-00e20e6d9b408433b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e20e6d9b408433b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "vpn-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0023c142ccf295a0b",
            "private_dns": "ip-10-0-0-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-54-80-85-221.compute-1.amazonaws.com",
            "public_ip": "54.80.85.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1fd1218656c3c65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2c6ea1658b613d3",
            "tags": {
              "Name": "vpn-instance"
            },
            "tags_all": {
              "Name": "vpn-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb23a23db820de2f"
            ]
          },
          "dependencies": [
            "aws_key_pair.vpn_key_pair",
            "aws_security_group.vpn_security_group",
            "aws_subnet.vpn_subnet",
            "aws_vpc.vpn_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpn_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401892909632:internet-gateway/igw-0162b252505ed1650",
            "id": "igw-0162b252505ed1650",
            "owner_id": "401892909632",
            "tags": {
              "Name": "vpn-igw"
            },
            "tags_all": {
              "Name": "vpn-igw"
            },
            "vpc_id": "vpc-0c06888698b687ef2"
          },
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpn_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401892909632:route-table/rtb-0f7760c80ee1f92f9",
            "id": "rtb-0f7760c80ee1f92f9",
            "owner_id": "401892909632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0162b252505ed1650",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpn-route-table"
            },
            "tags_all": {
              "Name": "vpn-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06888698b687ef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpn_igw",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bebf04a315011b9",
            "route_table_id": "rtb-0f7760c80ee1f92f9",
            "subnet_id": "subnet-0e2c6ea1658b613d3"
          },
          "dependencies": [
            "aws_internet_gateway.vpn_igw",
            "aws_route_table.vpn_route_table",
            "aws_subnet.vpn_subnet",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401892909632:security-group/sg-0fb23a23db820de2f",
            "description": "Allow SSH and VPN traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb23a23db820de2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "OpenVPN",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpn-security-group",
            "name_prefix": "",
            "owner_id": "401892909632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpn-security-group"
            },
            "tags_all": {
              "Name": "vpn-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06888698b687ef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401892909632:subnet/subnet-0e2c6ea1658b613d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2c6ea1658b613d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401892909632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpn-subnet"
            },
            "tags_all": {
              "Name": "vpn-subnet"
            },
            "vpc_id": "vpc-0c06888698b687ef2"
          },
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpn_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401892909632:vpc/vpc-0c06888698b687ef2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-03351aa641d33c4e9",
            "default_route_table_id": "rtb-087f7375e82310228",
            "default_security_group_id": "sg-09730716864415c97",
            "dhcp_options_id": "dopt-0335c3100a6f7ac50",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c06888698b687ef2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087f7375e82310228",
            "owner_id": "401892909632",
            "tags": {
              "Name": "vpn-vpc"
            },
            "tags_all": {
              "Name": "vpn-vpc"
            }
          }
        }
      ]
    }
  ]
}